# zigbeemcp

./: .env.example  .gitignore  API_QUICKSTART.md  README.md  pyproject.toml
scripts/: dev-run-logger.sh  tail_logs.py  test_api.py  z2m_smoketest.py
src/smarthome/: db.py  mqtt.py  ports.py
src/smarthome/api/: __init__.py  auth.py  config.py  device_controller.py  models.py  routes.py  server.py
src/smarthome/services/: z2m.py
src/smarthome/tracker/: logger.py
systemd/: smartlogger.service  smartserver.service
