[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smarthome"
version = "0.1.0"
description = "Zigbee smart-home"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Aidan Adams" }]

dependencies = [
  "paho-mqtt",
  "python-dotenv",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "requests>=2.32.5",
]

[project.scripts]
smart-logger = "smarthome.tracker.logger:main"
smart-server = "smarthome.api.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
